--- a/src/package.json
+++ b/src/package.json
@@ -27,6 +27,9 @@
     "@ionic/angular": "^4.7.1",
     "@ionic/storage": "^2.2.0",
     "cordova-android": "8.1.0",
+    "cordova-plugin-appcenter-analytics": "^0.5.1",
+    "cordova-plugin-appcenter-crashes": "^0.5.1",
+    "cordova-plugin-appcenter-shared": "^0.5.1",
     "cordova-plugin-geolocation": "^4.0.2",
     "cordova-sqlite-storage": "^4.0.0",
     "core-js": "^2.5.4",
@@ -78,7 +81,9 @@
       },
       "cordova-plugin-ionic-keyboard": {},
       "cordova-plugin-geolocation": {},
-      "cordova-sqlite-storage": {}
+      "cordova-sqlite-storage": {},
+      "cordova-plugin-appcenter-analytics": {},
+      "cordova-plugin-appcenter-crashes": {}
     },
     "platforms": [
       "android"
